# articles--2026fusionEmbBenchmark

./: .gitignore  README.md  fmfusions.code-workspace
fmextractors/fmdnabert/: README.md  extract_embd.py  pyproject.toml  run.sh
fmextractors/fmevo/: README.md  extract_embd.py  init_evo2.sh  run-evo2.sh
fmextractors/fmhyena/: README.md  extract_embd_m.py  pyproject.toml  run.sh
fmextractors/fmnt/: README.md  extract_embd_m.py  pyproject.toml  run.sh
fmextractors/test_data/: fusionai_test_target.csv
fmlib/: pyproject.toml
fmlib/fmlib/: fm.py  io.py
fmlib/scripts/: compare_outputs.sh  create_one_hot_dataset.py
fmlib/tests/: test_download.py  test_io.py
fusion-classifiers/: README.md  ai.py  pyproject.toml  train_embeddings.py  train_fusionai.py  train_script_example.sh
notebooks/: README.md  add_eval.py  ai.py  compare_models.ipynb  embd_train.py  embd_train_all.sh  fusionai_train.py  helpers.py  models_comparison.ipynb  pyproject.toml  run_all.sh
test_data/: fusionai_test_sim.txt
