[project]
name = "fmlib"
version = "0.1.22"
description = "# FBME Bio Library – Tools for Biomedical and Bioinformatics Research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "keras>=3.12.0",
    "numpy>=1.24.3",
    "pandas>=2.3.3",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fmlib"]


[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "C4",
    "SIM",
    "PTH",
    "FBT",
    "A",
    "COM",
    "Q",
    "RET",
    "ARG",
    #"ERA",
]
