[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fmlib",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn==1.7.0",
    "tqdm>=4.67.1",
    "zenodo-get>=2.0.0",
]

[tool.uv.sources]
fmlib = { path = "../fmlib" }

[tool.ruff]
line-length = 120
show-fixes = true
