[project]
name = "fmhyena"
version = "0.1.0"
description = "HyenaDNA embeddings extractor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "tf-keras>=2.15.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "zenodo-get>=2.0.0",
]


[tool.uv.sources]
fmlib = { path = "../../fmlib" }

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.pydocstyle]
convention = "google"
